# cainiao.github.io

./: .gitignore  CNAME  README.md  admin.html  chaodai.json  danci.html  danci2.html  danci3.html  default2.conf  fanyi.html  index.html  index2.html  jianshen.html  memory.md  pyproject.toml  read.html  read_pk.html  relations.csv  run-server.bat  shici.html  shici.json  start-https.bat  test_data.json  tingli.html  uv_tree.txt  voice_trigger_recorder.html  words.json
.trae/skills/moring-read-vocab/: SKILL.md
.workbuddy/memory/: 2026-05-19.md  2026-05-20.md
danci/: admin.html  chaodai.json  danci-simple.txt  danci.html  relations.csv  words.json
data/: hanzi.csv  moreguanxi.csv  《20000单词表》.xlsx  关系.txt
docs/: QA_ai.txt  ai-handbook-reader.html  prd.md  pronunciation-scoring-windows-native.md  skill.md  test_article.txt  thinking-coach.html  tingli2-logic.md  update.md  艾宾浩斯诗词复习工具（双用户版）PRD文档.md  艾宾浩斯诗词复习工具（双用户版）PRD文档（新增听力考试模块）.md
math/: math-admin.html  math.html  math.json
scripts/: compare_poems.py  gen_favicon.py  gen_relations.py  parse_srt.py
server/: config.py  demo2.py  main.py  server.py
server/cert/: cert.pem  generate_cert.py  key.pem  simple_cert.py
server/scorer/: acoustic.py  asr.py  phoneme.py  tts.py
server/speechbrain-asr/: README.md  config.json  hyperparams.yaml
shici/: shici.html  shici.json  shici.txt
tingli/: tingli.html  tingli.json  tingli2.html
