[project]
name = "moring-read"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.8",
    "fastapi>=0.136.1",
    "faster-whisper>=1.1.0",
    "flask>=3.1.3",
    "k2>=0.3.0",
    "kokoro>=0.9.4",
    "kokoro-onnx>=0.5.0",
    "librosa>=0.11.0",
    "nltk>=3.9.4",
    "openai-whisper>=20250625",
    "pandas>=3.0.3",
    "python-multipart>=0.0.29",
    "soundfile>=0.13.1",
    "speechbrain>=1.1.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "transformers>=5.8.0",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
